--- a/environment.yml
+++ b/environment.yml
@@ -3,133 +3,135 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - alsa-lib=1.2.3.2=h166bdaf_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - atk-1.0=2.36.0=h3371d22_4
-  - attr=2.4.48=h516909a_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py39h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.10.11=h06a4308_0
-  - cairo=1.16.0=h19f5f5c_2
-  - certifi=2022.9.24=py39h06a4308_0
-  - cffi=1.15.1=py39h74dc2b5_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
-  - cryptography=38.0.1=py39h9ce1e76_0
-  - dbus=1.13.18=hb2f20db_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.4.9=h6a678d5_0
-  - fftw=3.3.9=h27cfd23_1
-  - fontconfig=2.14.0=hc2a2eb6_1
-  - freetype=2.12.1=h4a9f257_0
-  - fribidi=1.0.10=h7b6447c_0
-  - gdk-pixbuf=2.42.8=h433bba3_0
-  - gettext=0.21.0=hf68c758_0
-  - giflib=5.2.1=h7b6447c_0
-  - glib=2.74.0=h6239696_0
-  - glib-tools=2.74.0=h6239696_0
-  - graphite2=1.3.14=h295c915_1
-  - gst-plugins-base=1.18.5=hc549b11_0
-  - gstreamer=1.18.5=ha1a6a79_0
-  - gtk2=2.24.33=hab0c2f8_0
-  - harfbuzz=2.9.1=h83ec7ef_1
-  - icu=68.1=h2531618_0
-  - idna=3.4=py39h06a4308_0
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - ipython=8.4.0=py39h06a4308_0
-  - jack=1.9.18=hfd4fe87_1001
-  - jedi=0.18.1=py39h06a4308_1
-  - jpeg=9e=h7f8727e_0
-  - json-c=0.13.1=h1bed415_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libcap=2.36=h516909a_0
-  - libdb=6.2.32=h6a678d5_1
-  - libdeflate=1.8=h7f8727e_5
-  - libffi=3.4.2=h295c915_4
-  - libflac=1.3.4=h27087fc_0
-  - libgcc-ng=12.1.0=h8d9b700_16
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libglib=2.74.0=h7a41b64_0
-  - libglu=9.0.0=hf484d3e_1
-  - libiconv=1.17=h166bdaf_0
-  - libnsl=2.0.0=h5eee18b_0
-  - libogg=1.3.5=h27cfd23_1
-  - libopus=1.3.1=h7b6447c_0
-  - libpng=1.6.37=hbc83047_0
-  - libsndfile=1.0.31=h9c3ff4c_1
-  - libstdcxx-ng=12.1.0=ha89aaad_16
-  - libtiff=4.4.0=hecacb30_0
-  - libtool=2.4.6=h295c915_1008
-  - libuuid=2.32.1=h7f98852_1000
-  - libvorbis=1.3.7=h7b6447c_0
-  - libwebp=1.2.4=h11a3e52_0
-  - libwebp-base=1.2.4=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxml2=2.9.10=h72842e0_4
-  - libzlib=1.2.13=h166bdaf_4
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - lz4-c=1.9.3=h295c915_1
-  - matplotlib-inline=0.1.6=py39h06a4308_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py39h7f8727e_0
-  - mkl_fft=1.3.1=py39hd3c417c_0
-  - mkl_random=1.2.2=py39h51133e4_0
-  - ncurses=6.3=h5eee18b_3
-  - numpy=1.23.3=py39h14f4228_0
-  - numpy-base=1.23.3=py39h31eccc5_0
-  - openssl=3.0.5=h166bdaf_2
-  - pango=1.42.4=h69149e4_5
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pathlib2=2.3.6=py39h06a4308_2
-  - pcre2=10.37=he7ceb23_1
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=9.2.0=py39hace64e9_1
-  - pip=22.2.2=py39h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - portaudio=19.6.0=h7b6447c_4
-  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - pthread-stubs=0.3=h0ce48e5_1
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pulseaudio=13.0=hd1b7508_1
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.11.2=pyhd3eb1b0_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
-  - pypubsub=4.0.3=py_0
-  - pysocks=1.7.1=py39h06a4308_0
-  - pysoundfile=0.11.0=pyhd8ed1ab_0
-  - python=3.9.13=h2660328_0_cpython
-  - python-sounddevice=0.4.1=pyh9f0ad1d_0
-  - python_abi=3.9=2_cp39
-  - readline=8.2=h5eee18b_0
-  - requests=2.28.1=py39h06a4308_0
-  - scipy=1.9.1=py39h14f4228_0
-  - setuptools=65.4.0=py39h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.39.3=h5082296_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tk=8.6.12=h1ccaba5_0
-  - traitlets=5.1.1=pyhd3eb1b0_0
-  - tzdata=2022e=h04d1e81_0
-  - urllib3=1.26.12=py39h06a4308_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - wxpython=4.1.1=py39he95d7a5_0
-  - xz=5.2.6=h5eee18b_0
-  - zlib=1.2.13=h166bdaf_4
-  - zstd=1.5.2=ha4553b6_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - alsa-lib=1.2.3.2
+  - asttokens=2.0.5
+  - atk-1.0=2.36.0
+  - attr=2.4.48
+  - backcall=0.2.0
+  - blas=1.0
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2022.10.11
+  - cairo=1.16.0
+  - certifi=2022.9.24
+  - cffi=1.15.1
+  - charset-normalizer=2.0.4
+  - cryptography=38.0.1
+  - dbus=1.13.18
+  - decorator=5.1.1
+  - executing=0.8.3
+  - expat=2.4.9
+  - fftw=3.3.9
+  - fontconfig=2.14.0
+  - freetype=2.12.1
+  - fribidi=1.0.10
+  - gdk-pixbuf=2.42.8
+  - gettext=0.21.0
+  - giflib=5.2.1
+  - glib=2.74.0
+  - glib-tools=2.74.0
+  - graphite2=1.3.14
+  - gst-plugins-base=1.18.5
+  - gstreamer=1.18.5
+  - gtk2=2.24.33
+  - harfbuzz=2.9.1
+  - icu=68.1
+  - idna=3.4
+  - intel-openmp=2021.4.0
+  - ipython=8.4.0
+  - jack=1.9.18
+  - jedi=0.18.1
+  - jpeg=9e
+  - json-c=0.13.1
+  - lcms2=2.12
+  - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libcap=2.36
+  - libdb=6.2.32
+  - libdeflate=1.8
+  - libffi=3.4.2
+  - libflac=1.3.4
+  - libgcc-ng=12.1.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libglib=2.74.0
+  - libglu=9.0.0
+  - libiconv=1.17
+  - libnsl=2.0.0
+  - libogg=1.3.5
+  - libopus=1.3.1
+  - libpng=1.6.37
+  - libsndfile=1.0.31
+  - libstdcxx-ng=12.1.0
+  - libtiff=4.4.0
+  - libtool=2.4.6
+  - libuuid=2.32.1
+  - libvorbis=1.3.7
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxcb=1.15
+  - libxml2=2.9.10
+  - libzlib=1.2.13
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.3
+  - matplotlib-inline=0.1.6
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - ncurses=6.3
+  - numpy=1.23.3
+  - numpy-base=1.23.3
+  - openssl=3.0.5
+  - pango=1.42.4
+  - parso=0.8.3
+  - pathlib2=2.3.6
+  - pcre2=10.37
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=9.2.0
+  - pip=22.2.2
+  - pixman=0.40.0
+  - portaudio=19.6.0
+  - prompt-toolkit=3.0.20
+  - pthread-stubs=0.3
+  - ptyprocess=0.7.0
+  - pulseaudio=13.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pygments=2.11.2
+  - pyopenssl=22.0.0
+  - pypubsub=4.0.3
+  - pysocks=1.7.1
+  - pysoundfile=0.11.0
+  - python=3.9.13
+  - python-sounddevice=0.4.1
+  - python_abi=3.9
+  - readline=8.2
+  - requests=2.28.1
+  - scipy=1.9.1
+  - setuptools=65.4.0
+  - six=1.16.0
+  - sqlite=3.39.3
+  - stack_data=0.2.0
+  - tk=8.6.12
+  - traitlets=5.1.1
+  - tzdata=2022e
+  - urllib3=1.26.12
+  - wcwidth=0.2.5
+  - wheel=0.37.1
+  - wxpython=4.1.1
+  - xz=5.2.6
+  - zlib=1.2.13
+  - zstd=1.5.2
   - pip:
-    - natsort==8.2.0
-    - pyaudio==0.2.12
-    - pydub==0.25.1
-    - pympi-ling==1.70.2
-    - simpleaudio==1.0.4
-    - tkinter-fonts-viewer==0.1.2
+      - natsort==8.2.0
+      - praatio==5.1.1
+      - pyaudio==0.2.12
+      - pydub==0.25.1
+      - pympi-ling==1.70.2
+      - simpleaudio==1.0.4
+      - tkinter-fonts-viewer==0.1.2
+      - typing-extensions==4.4.0
